# snailmail

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: NOTES.md
notes/: bandwidth-models.md  handoff-main.md
repros/: icechunk_2228.py
src/snailmail/: __init__.py  bandwidth.py  cli.py  convenience.py  latency.py  record.py  s3.py  server.py
tests/: test_directory.py  test_latency.py  test_s3.py  test_server.py
