[project]
name = "snailmail"
version = "0.1.0"
description = "A local HTTP file server with injectable latency and bandwidth limits, for benchmarking range / object-store / virtual-chunk reads under realistic network conditions."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Ian Hunt-Isaak", email = "ian@earthmover.io" }]
keywords = ["http", "latency", "bandwidth", "benchmark", "range-requests", "object-store", "zarr", "icechunk"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: System :: Benchmark",
]
dependencies = [
    "aiohttp>=3.9",
    "numpy>=1.24",
]

[project.scripts]
snailmail = "snailmail.server:main"

[project.urls]
Homepage = "https://github.com/ianhi/snailmail"
Issues = "https://github.com/ianhi/snailmail/issues"

[dependency-groups]
dev = ["pytest>=8", "ruff>=0.6"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/snailmail"]

[tool.ruff]
line-length = 100
